Update and rename index.htm to index.html

--- a/index.html
+++ b/index.html
@@ -1570,18 +1570,18 @@ class=SpellE>fr</span>&quot;&gt;<o:p></o:p></p>
 
 <p class=MsoNormal>&lt;<span class=SpellE>head</span>&gt;<o:p></o:p></p>
 
-<p class=MsoNormal><span style='mso-spacerun:yes'>    </span>&lt;<span
+<p class=MsoNormal><span style='mso-spacerun:yes'>Â Â Â  </span>&lt;<span
 class=SpellE>meta</span> <span class=SpellE>charset</span>=&quot;UTF-8&quot;&gt;<o:p></o:p></p>
 
-<p class=MsoNormal><span style='mso-spacerun:yes'>    </span>&lt;<span
+<p class=MsoNormal><span style='mso-spacerun:yes'>Â Â Â  </span>&lt;<span
 class=SpellE>meta</span> <span class=SpellE>name</span>=&quot;<span
 class=SpellE>viewport</span>&quot; content=&quot;<span class=SpellE>width</span>=<span
 class=SpellE>device-width</span>, initial-<span class=SpellE>scale</span>=1.0&quot;&gt;<o:p></o:p></p>
 
-<p class=MsoNormal><span style='mso-spacerun:yes'>    </span>&lt;<span
+<p class=MsoNormal><span style='mso-spacerun:yes'>Â Â Â  </span>&lt;<span
 class=SpellE>title</span>&gt;Danse sur Glace - Accueil&lt;/<span class=SpellE>title</span>&gt;<o:p></o:p></p>
 
-<p class=MsoNormal><span style='mso-spacerun:yes'>    </span>&lt;<span
+<p class=MsoNormal><span style='mso-spacerun:yes'>Â Â Â  </span>&lt;<span
 class=SpellE>link</span> rel=&quot;<span class=SpellE>stylesheet</span>&quot;
 href=&quot;style.css&quot;&gt;<o:p></o:p></p>
 
@@ -1589,103 +1589,103 @@ href=&quot;style.css&quot;&gt;<o:p></o:p></p>
 
 <p class=MsoNormal>&lt;body&gt;<o:p></o:p></p>
 
-<p class=MsoNormal><span style='mso-spacerun:yes'>    </span>&lt;header&gt;<o:p></o:p></p>
+<p class=MsoNormal><span style='mso-spacerun:yes'>Â Â Â  </span>&lt;header&gt;<o:p></o:p></p>
 
-<p class=MsoNormal><span style='mso-spacerun:yes'>       
-</span>&lt;h1&gt;Compétitions de Danse sur Glace&lt;/h1&gt;<o:p></o:p></p>
+<p class=MsoNormal><span style='mso-spacerun:yes'>Â Â Â Â Â Â Â 
+</span>&lt;h1&gt;CompÃ©titions de Danse sur Glace&lt;/h1&gt;<o:p></o:p></p>
 
-<p class=MsoNormal><span style='mso-spacerun:yes'>    </span>&lt;/header&gt;<o:p></o:p></p>
+<p class=MsoNormal><span style='mso-spacerun:yes'>Â Â Â  </span>&lt;/header&gt;<o:p></o:p></p>
 
-<p class=MsoNormal><span style='mso-spacerun:yes'>    </span>&lt;main&gt;<o:p></o:p></p>
+<p class=MsoNormal><span style='mso-spacerun:yes'>Â Â Â  </span>&lt;main&gt;<o:p></o:p></p>
 
-<p class=MsoNormal><span style='mso-spacerun:yes'>        </span>&lt;section
+<p class=MsoNormal><span style='mso-spacerun:yes'>Â Â Â Â Â Â Â  </span>&lt;section
 class=&quot;<span class=SpellE>search</span>&quot;&gt;<o:p></o:p></p>
 
-<p class=MsoNormal><span style='mso-spacerun:yes'>           
-</span>&lt;h2&gt;Rechercher une vidéo&lt;/h2&gt;<o:p></o:p></p>
+<p class=MsoNormal><span style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â 
+</span>&lt;h2&gt;Rechercher une vidÃ©o&lt;/h2&gt;<o:p></o:p></p>
 
-<p class=MsoNormal><span style='mso-spacerun:yes'>            </span>&lt;<span
+<p class=MsoNormal><span style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â  </span>&lt;<span
 class=SpellE>form</span> id=&quot;<span class=SpellE>search-form</span>&quot;&gt;<o:p></o:p></p>
 
-<p class=MsoNormal><span style='mso-spacerun:yes'>               
+<p class=MsoNormal><span style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â 
 </span>&lt;input type=&quot;<span class=SpellE>text</span>&quot; <span
-class=SpellE>placeholder</span>=&quot;Catégorie d'âge (ex : Benjamin)&quot;
+class=SpellE>placeholder</span>=&quot;CatÃ©gorie d'Ã¢ge (ex : Benjamin)&quot;
 id=&quot;<span class=SpellE>age-category</span>&quot;&gt;<o:p></o:p></p>
 
-<p class=MsoNormal><span style='mso-spacerun:yes'>               
+<p class=MsoNormal><span style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â 
 </span>&lt;input type=&quot;<span class=SpellE>text</span>&quot; <span
 class=SpellE>placeholder</span>=&quot;Ville&quot; id=&quot;city&quot;&gt;<o:p></o:p></p>
 
-<p class=MsoNormal><span style='mso-spacerun:yes'>               
+<p class=MsoNormal><span style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â 
 </span>&lt;input type=&quot;date&quot; id=&quot;date&quot;&gt;<o:p></o:p></p>
 
-<p class=MsoNormal><span style='mso-spacerun:yes'>               
+<p class=MsoNormal><span style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â 
 </span>&lt;input type=&quot;<span class=SpellE>text</span>&quot; <span
-class=SpellE>placeholder</span>=&quot;Catégorie (Danse, Couple)&quot; id=&quot;<span
+class=SpellE>placeholder</span>=&quot;CatÃ©gorie (Danse, Couple)&quot; id=&quot;<span
 class=SpellE>category</span>&quot;&gt;<o:p></o:p></p>
 
-<p class=MsoNormal><span style='mso-spacerun:yes'>               
+<p class=MsoNormal><span style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â 
 </span>&lt;input type=&quot;<span class=SpellE>text</span>&quot; <span
-class=SpellE>placeholder</span>=&quot;Danse (Libre, Imposée)&quot;
+class=SpellE>placeholder</span>=&quot;Danse (Libre, ImposÃ©e)&quot;
 id=&quot;dance&quot;&gt;<o:p></o:p></p>
 
-<p class=MsoNormal><span style='mso-spacerun:yes'>                </span>&lt;<span
+<p class=MsoNormal><span style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â  </span>&lt;<span
 class=SpellE>button</span> type=&quot;<span class=SpellE>button</span>&quot;
 id=&quot;<span class=SpellE>search-btn</span>&quot;&gt;Rechercher&lt;/<span
 class=SpellE>button</span>&gt;<o:p></o:p></p>
 
-<p class=MsoNormal><span style='mso-spacerun:yes'>            </span>&lt;/<span
+<p class=MsoNormal><span style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â  </span>&lt;/<span
 class=SpellE>form</span>&gt;<o:p></o:p></p>
 
-<p class=MsoNormal><span style='mso-spacerun:yes'>       
+<p class=MsoNormal><span style='mso-spacerun:yes'>Â Â Â Â Â Â Â 
 </span>&lt;/section&gt;<o:p></o:p></p>
 
-<p class=MsoNormal><span style='mso-spacerun:yes'>        </span>&lt;section
+<p class=MsoNormal><span style='mso-spacerun:yes'>Â Â Â Â Â Â Â  </span>&lt;section
 class=&quot;<span class=SpellE>videos</span>&quot;&gt;<o:p></o:p></p>
 
-<p class=MsoNormal><span style='mso-spacerun:yes'>           
-</span>&lt;h2&gt;Vidéos&lt;/h2&gt;<o:p></o:p></p>
+<p class=MsoNormal><span style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â 
+</span>&lt;h2&gt;VidÃ©os&lt;/h2&gt;<o:p></o:p></p>
 
-<p class=MsoNormal><span style='mso-spacerun:yes'>            </span>&lt;div
+<p class=MsoNormal><span style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â  </span>&lt;div
 id=&quot;<span class=SpellE>video-list</span>&quot;&gt;<o:p></o:p></p>
 
-<p class=MsoNormal><span style='mso-spacerun:yes'>                </span><span
-class=GramE>&lt;!--</span> Les vidéos filtrées apparaîtront ici --&gt;<o:p></o:p></p>
+<p class=MsoNormal><span style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â  </span><span
+class=GramE>&lt;!--</span> Les vidÃ©os filtrÃ©es apparaÃ®tront ici --&gt;<o:p></o:p></p>
 
-<p class=MsoNormal><span style='mso-spacerun:yes'>               
+<p class=MsoNormal><span style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â 
 </span>&lt;div class=&quot;<span class=SpellE>video</span>-item&quot;&gt;<o:p></o:p></p>
 
-<p class=MsoNormal><span style='mso-spacerun:yes'>                   
+<p class=MsoNormal><span style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â 
 </span>&lt;a href=&quot;video.html&quot;&gt;<o:p></o:p></p>
 
-<p class=MsoNormal><span style='mso-spacerun:yes'>                       
+<p class=MsoNormal><span style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â 
 </span>&lt;<span class=SpellE>img</span> src=&quot;placeholder.jpg&quot;
-alt=&quot;Miniature vidéo&quot;&gt;<o:p></o:p></p>
+alt=&quot;Miniature vidÃ©o&quot;&gt;<o:p></o:p></p>
 
-<p class=MsoNormal><span style='mso-spacerun:yes'>                       
+<p class=MsoNormal><span style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â 
 </span>&lt;p&gt;Coupe d'Automne 2024 - Lyon - Benjamin&lt;/p&gt;<o:p></o:p></p>
 
-<p class=MsoNormal><span style='mso-spacerun:yes'>                   
+<p class=MsoNormal><span style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â 
 </span>&lt;/a&gt;<o:p></o:p></p>
 
-<p class=MsoNormal><span style='mso-spacerun:yes'>               
+<p class=MsoNormal><span style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â 
 </span>&lt;/div&gt;<o:p></o:p></p>
 
-<p class=MsoNormal><span style='mso-spacerun:yes'>           
+<p class=MsoNormal><span style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â 
 </span>&lt;/div&gt;<o:p></o:p></p>
 
-<p class=MsoNormal><span style='mso-spacerun:yes'>       
+<p class=MsoNormal><span style='mso-spacerun:yes'>Â Â Â Â Â Â Â 
 </span>&lt;/section&gt;<o:p></o:p></p>
 
-<p class=MsoNormal><span style='mso-spacerun:yes'>    </span>&lt;/main&gt;<o:p></o:p></p>
+<p class=MsoNormal><span style='mso-spacerun:yes'>Â Â Â  </span>&lt;/main&gt;<o:p></o:p></p>
 
-<p class=MsoNormal><span style='mso-spacerun:yes'>    </span>&lt;<span
+<p class=MsoNormal><span style='mso-spacerun:yes'>Â Â Â  </span>&lt;<span
 class=SpellE>footer</span>&gt;<o:p></o:p></p>
 
-<p class=MsoNormal><span style='mso-spacerun:yes'>        </span>&lt;p&gt;&amp;<span
+<p class=MsoNormal><span style='mso-spacerun:yes'>Â Â Â Â Â Â Â  </span>&lt;p&gt;&amp;<span
 class=GramE>copy;</span> 2025 Danse sur Glace&lt;/p&gt;<o:p></o:p></p>
 
-<p class=MsoNormal><span style='mso-spacerun:yes'>    </span>&lt;/<span
+<p class=MsoNormal><span style='mso-spacerun:yes'>Â Â Â  </span>&lt;/<span
 class=SpellE>footer</span>&gt;<o:p></o:p></p>
 
 <p class=MsoNormal>&lt;/body&gt;<o:p></o:p></p>
